# service/api/prueba/v1/prueba_grpc.pb.go
@@ -1,167 +1,0 @@
-// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.5.1
-// - protoc             (unknown)
-// source: api/prueba/v1/prueba.proto
-
-package prueba
-
-import (
-	context "context"
-	grpc "google.golang.org/grpc"
-	codes "google.golang.org/grpc/codes"
-	status "google.golang.org/grpc/status"
-)
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.64.0 or later.
-const _ = grpc.SupportPackageIsVersion9
-
-const (
-	Pruebav1Service_FindPruebas_FullMethodName  = "/api.prueba.v1.Pruebav1Service/FindPruebas"
-	Pruebav1Service_UpsertPrueba_FullMethodName = "/api.prueba.v1.Pruebav1Service/UpsertPrueba"
-)
-
-// Pruebav1ServiceClient is the client API for Pruebav1Service service.
-//
-// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-//
-// Pruebav1Service: generated with ops=[get,upsert]
-type Pruebav1ServiceClient interface {
-	// GET /v1/prueba - list or search by filters (query: id OR name)
-	FindPruebas(ctx context.Context, in *FindPruebasRequest, opts ...grpc.CallOption) (*FindPruebasResponse, error)
-	// POST /v1/prueba - create or update (id empty/0 => create, >0 => update)
-	UpsertPrueba(ctx context.Context, in *UpsertPruebaRequest, opts ...grpc.CallOption) (*UpsertPruebaResponse, error)
-}
-
-type pruebav1ServiceClient struct {
-	cc grpc.ClientConnInterface
-}
-
-func NewPruebav1ServiceClient(cc grpc.ClientConnInterface) Pruebav1ServiceClient {
-	return &pruebav1ServiceClient{cc}
-}
-
-func (c *pruebav1ServiceClient) FindPruebas(ctx context.Context, in *FindPruebasRequest, opts ...grpc.CallOption) (*FindPruebasResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(FindPruebasResponse)
-	err := c.cc.Invoke(ctx, Pruebav1Service_FindPruebas_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *pruebav1ServiceClient) UpsertPrueba(ctx context.Context, in *UpsertPruebaRequest, opts ...grpc.CallOption) (*UpsertPruebaResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(UpsertPruebaResponse)
-	err := c.cc.Invoke(ctx, Pruebav1Service_UpsertPrueba_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// Pruebav1ServiceServer is the server API for Pruebav1Service service.
-// All implementations must embed UnimplementedPruebav1ServiceServer
-// for forward compatibility.
-//
-// Pruebav1Service: generated with ops=[get,upsert]
-type Pruebav1ServiceServer interface {
-	// GET /v1/prueba - list or search by filters (query: id OR name)
-	FindPruebas(context.Context, *FindPruebasRequest) (*FindPruebasResponse, error)
-	// POST /v1/prueba - create or update (id empty/0 => create, >0 => update)
-	UpsertPrueba(context.Context, *UpsertPruebaRequest) (*UpsertPruebaResponse, error)
-	mustEmbedUnimplementedPruebav1ServiceServer()
-}
-
-// UnimplementedPruebav1ServiceServer must be embedded to have
-// forward compatible implementations.
-//
-// NOTE: this should be embedded by value instead of pointer to avoid a nil
-// pointer dereference when methods are called.
-type UnimplementedPruebav1ServiceServer struct{}
-
-func (UnimplementedPruebav1ServiceServer) FindPruebas(context.Context, *FindPruebasRequest) (*FindPruebasResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method FindPruebas not implemented")
-}
-func (UnimplementedPruebav1ServiceServer) UpsertPrueba(context.Context, *UpsertPruebaRequest) (*UpsertPruebaResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method UpsertPrueba not implemented")
-}
-func (UnimplementedPruebav1ServiceServer) mustEmbedUnimplementedPruebav1ServiceServer() {}
-func (UnimplementedPruebav1ServiceServer) testEmbeddedByValue()                         {}
-
-// UnsafePruebav1ServiceServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to Pruebav1ServiceServer will
-// result in compilation errors.
-type UnsafePruebav1ServiceServer interface {
-	mustEmbedUnimplementedPruebav1ServiceServer()
-}
-
-func RegisterPruebav1ServiceServer(s grpc.ServiceRegistrar, srv Pruebav1ServiceServer) {
-	// If the following call pancis, it indicates UnimplementedPruebav1ServiceServer was
-	// embedded by pointer and is nil.  This will cause panics if an
-	// unimplemented method is ever invoked, so we test this at initialization
-	// time to prevent it from happening at runtime later due to I/O.
-	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
-		t.testEmbeddedByValue()
-	}
-	s.RegisterService(&Pruebav1Service_ServiceDesc, srv)
-}
-
-func _Pruebav1Service_FindPruebas_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(FindPruebasRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(Pruebav1ServiceServer).FindPruebas(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: Pruebav1Service_FindPruebas_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(Pruebav1ServiceServer).FindPruebas(ctx, req.(*FindPruebasRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _Pruebav1Service_UpsertPrueba_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(UpsertPruebaRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(Pruebav1ServiceServer).UpsertPrueba(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: Pruebav1Service_UpsertPrueba_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(Pruebav1ServiceServer).UpsertPrueba(ctx, req.(*UpsertPruebaRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-// Pruebav1Service_ServiceDesc is the grpc.ServiceDesc for Pruebav1Service service.
-// It's only intended for direct use with grpc.RegisterService,
-// and not to be introspected or modified (even as a copy)
-var Pruebav1Service_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "api.prueba.v1.Pruebav1Service",
-	HandlerType: (*Pruebav1ServiceServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "FindPruebas",
-			Handler:    _Pruebav1Service_FindPruebas_Handler,
-		},
-		{
-			MethodName: "UpsertPrueba",
-			Handler:    _Pruebav1Service_UpsertPrueba_Handler,
-		},
-	},
-	Streams:  []grpc.StreamDesc{},
-	Metadata: "api/prueba/v1/prueba.proto",
-}
